# WeatherData

./: .gitignore  Dockerfile  README.md  crawler.py  db_utils.py  docker-compose.yml  fix.py  hko.py  hko.sh  hko.sql  mail.py  pollutant.sql  pyproject.toml  requirements.txt  run.sh  utils.py
hk/: crawler.py  hko.py  hko.sh  hko.sql  run.sh
sg/: fetch.py  observation.py  sg.sh  sg_pollutant.sql  sg_visibility.sql  sg_weather.sql
