[tool.poetry]
name = "weatherdata"
version = "0.1.0"
description = ""
authors = ["zh.tong <zh.tong@idiaoyan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyquery = "1.4.1"
requests = "^2.31.0"
pymysql = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
